// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip should render children nodes 1`] = `
<div>
  <li
    class="wc-block-components-chip wc-block-components-chip--radius-small"
  >
    <span
      aria-hidden="false"
      class="wc-block-components-chip__text"
    >
      Test
    </span>
    Lorem Ipsum
  </li>
</div>
`;

exports[`Chip should render defined radius 1`] = `
<div>
  <li
    class="wc-block-components-chip wc-block-components-chip--radius-large"
  >
    <span
      aria-hidden="false"
      class="wc-block-components-chip__text"
    >
      Test
    </span>
  </li>
</div>
`;

exports[`Chip should render nodes as the text 1`] = `
<div>
  <li
    class="wc-block-components-chip wc-block-components-chip--radius-small"
  >
    <span
      aria-hidden="false"
      class="wc-block-components-chip__text"
    >
      <h1>
        Test
      </h1>
    </span>
  </li>
</div>
`;

exports[`Chip should render screen reader text 1`] = `
<div>
  <li
    class="wc-block-components-chip wc-block-components-chip--radius-small"
  >
    <span
      aria-hidden="true"
      class="wc-block-components-chip__text"
    >
      Test
    </span>
    <span
      class="screen-reader-text"
    >
      Test 2
    </span>
  </li>
</div>
`;

exports[`Chip should render text 1`] = `
<div>
  <li
    class="wc-block-components-chip wc-block-components-chip--radius-small"
  >
    <span
      aria-hidden="false"
      class="wc-block-components-chip__text"
    >
      Test
    </span>
  </li>
</div>
`;

exports[`Chip with custom wrapper should render a chip made up of a div instead of a li 1`] = `
<div>
  <div
    class="wc-block-components-chip wc-block-components-chip--radius-small"
  >
    <span
      aria-hidden="false"
      class="wc-block-components-chip__text"
    >
      Test
    </span>
  </div>
</div>
`;

exports[`RemovableChip should render custom aria label 1`] = `
<div>
  <li
    class="is-removable wc-block-components-chip wc-block-components-chip--radius-small"
  >
    <span
      aria-hidden="false"
      class="wc-block-components-chip__text"
    >
      <h1>
        Test
      </h1>
    </span>
    <button
      aria-label="Aria test"
      class="wc-block-components-chip__remove"
    >
      <svg
        aria-hidden="true"
        class="wc-block-components-chip__remove-icon"
        focusable="false"
        height="16"
        role="img"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 13.06l3.712 3.713 1.061-1.06L13.061 12l3.712-3.712-1.06-1.06L12 10.938 8.288 7.227l-1.061 1.06L10.939 12l-3.712 3.712 1.06 1.061L12 13.061z"
        />
      </svg>
    </button>
  </li>
</div>
`;

exports[`RemovableChip should render default aria label if text is a node 1`] = `
<div>
  <li
    class="is-removable wc-block-components-chip wc-block-components-chip--radius-small"
  >
    <span
      aria-hidden="true"
      class="wc-block-components-chip__text"
    >
      <h1>
        Test
      </h1>
    </span>
    <span
      class="screen-reader-text"
    >
      Test 2
    </span>
    <button
      aria-label="Remove "Test 2""
      class="wc-block-components-chip__remove"
    >
      <svg
        aria-hidden="true"
        class="wc-block-components-chip__remove-icon"
        focusable="false"
        height="16"
        role="img"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 13.06l3.712 3.713 1.061-1.06L13.061 12l3.712-3.712-1.06-1.06L12 10.938 8.288 7.227l-1.061 1.06L10.939 12l-3.712 3.712 1.06 1.061L12 13.061z"
        />
      </svg>
    </button>
  </li>
</div>
`;

exports[`RemovableChip should render screen reader text aria label 1`] = `
<div>
  <li
    class="is-removable wc-block-components-chip wc-block-components-chip--radius-small"
  >
    <span
      aria-hidden="true"
      class="wc-block-components-chip__text"
    >
      Test
    </span>
    <span
      class="screen-reader-text"
    >
      Test 2
    </span>
    <button
      aria-label="Remove "Test 2""
      class="wc-block-components-chip__remove"
    >
      <svg
        aria-hidden="true"
        class="wc-block-components-chip__remove-icon"
        focusable="false"
        height="16"
        role="img"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 13.06l3.712 3.713 1.061-1.06L13.061 12l3.712-3.712-1.06-1.06L12 10.938 8.288 7.227l-1.061 1.06L10.939 12l-3.712 3.712 1.06 1.061L12 13.061z"
        />
      </svg>
    </button>
  </li>
</div>
`;

exports[`RemovableChip should render text and the remove button 1`] = `
<div>
  <li
    class="is-removable wc-block-components-chip wc-block-components-chip--radius-small"
  >
    <span
      aria-hidden="false"
      class="wc-block-components-chip__text"
    >
      Test
    </span>
    <button
      aria-label="Remove "Test""
      class="wc-block-components-chip__remove"
    >
      <svg
        aria-hidden="true"
        class="wc-block-components-chip__remove-icon"
        focusable="false"
        height="16"
        role="img"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 13.06l3.712 3.713 1.061-1.06L13.061 12l3.712-3.712-1.06-1.06L12 10.938 8.288 7.227l-1.061 1.06L10.939 12l-3.712 3.712 1.06 1.061L12 13.061z"
        />
      </svg>
    </button>
  </li>
</div>
`;

exports[`RemovableChip should render with disabled remove button 1`] = `
<div>
  <li
    class="is-removable wc-block-components-chip wc-block-components-chip--radius-small"
  >
    <span
      aria-hidden="false"
      class="wc-block-components-chip__text"
    >
      Test
    </span>
    <button
      aria-label="Remove "Test""
      class="wc-block-components-chip__remove"
      disabled=""
    >
      <svg
        aria-hidden="true"
        class="wc-block-components-chip__remove-icon"
        focusable="false"
        height="16"
        role="img"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 13.06l3.712 3.713 1.061-1.06L13.061 12l3.712-3.712-1.06-1.06L12 10.938 8.288 7.227l-1.061 1.06L10.939 12l-3.712 3.712 1.06 1.061L12 13.061z"
        />
      </svg>
    </button>
  </li>
</div>
`;

exports[`RemovableChip with removeOnAnyClick should be a button when removeOnAnyClick is set to true 1`] = `
<div>
  <button
    aria-label="Remove "Test""
    class="is-removable wc-block-components-chip wc-block-components-chip--radius-small"
  >
    <span
      aria-hidden="false"
      class="wc-block-components-chip__text"
    >
      Test
    </span>
    <span
      aria-hidden="true"
      class="wc-block-components-chip__remove"
    >
      <svg
        aria-hidden="true"
        class="wc-block-components-chip__remove-icon"
        focusable="false"
        height="16"
        role="img"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 13.06l3.712 3.713 1.061-1.06L13.061 12l3.712-3.712-1.06-1.06L12 10.938 8.288 7.227l-1.061 1.06L10.939 12l-3.712 3.712 1.06 1.061L12 13.061z"
        />
      </svg>
    </span>
  </button>
</div>
`;
